# streamlit_portfolio

./: .gitignore  Dockerfile  docker-compose.yml  main.py  main.tf  pyproject.toml  readme.md  run.ps1
.streamlit/: config.toml
app/: about.py  contact.py  portfolio.py
